--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,19 @@
     "php": "^7.2.5",
     "barryvdh/laravel-debugbar": "^3.3",
     "fideloper/proxy": "^4.2",
+    "freyo/flysystem-qcloud-cos-v5": "^2.0",
     "fruitcake/laravel-cors": "^1.0",
     "guzzlehttp/guzzle": "^6.3",
     "intervention/image": "^2.5",
+    "jacobcyl/ali-oss-storage": "^2.1",
     "laravel/framework": "^7.0",
     "laravel/tinker": "^2.0",
     "laravel/ui": "^2.0",
     "mews/captcha": "^3.1",
     "mews/purifier": "~3.0",
     "phpoffice/phpspreadsheet": "^1.12",
-    "spatie/laravel-permission": "^3.11"
+    "spatie/laravel-permission": "^3.11",
+    "zgldh/qiniu-laravel-storage": "^0.10.3"
   },
   "require-dev": {
     "facade/ignition": "^2.0",
